# equipment-optimizer

./: Cargo.toml  README.md
res/: equipment.json  items.json
src/: character.rs  error.rs  item.rs  itemset.rs  main.rs
