[package]
name = "equipop"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "0.6"
indicatif = "0.13"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
