[package]
name = "equipop"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# lto = true
# codegen-units = 1

[dependencies]
enum-map = "2.4"
indicatif = "0.17.3"
itertools = "0.10"
num-format = "0.4"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
