[package]
name = "equipop"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# lto = true
# codegen-units = 1

[dependencies]
enum-map = "0.6"
indicatif = { version = "0.13", features = ["with_rayon"] }
itertools = "0.8"
num-format = "0.4"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
